--- a/VRChat/82/1327882.html
+++ b/VRChat/82/1327882.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bf1tHI0iWFtCicYDXN1eQPCnvGjfcBIn6hBDGM1E4ts="></script>
+    "BAMLRbTM0UT7woUYMwNOSvaolndnS/+GDVAhBt0RPLc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"メイドの夏制服｜#VRoid","description":"既存のメイドワンピースをベースに夏制服へアレンジしました。\nVRChatで使用できるエミッションデータも付属しています。\n特典版には赤リボン＋オプションのリボンが2種付属します。\n\nVRoid Studioのワンピース（半袖）に使用する想定で制作しています。\n\n既存のメイドワンピースは長袖です。\nhttps://yui-noe.booth.pm/items/1273314","url":"https://booth.pm/ja/items/1327882","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1500","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1327882/8d2bf892-e71b-40ce-a74b-c09e55c8dc16_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bf1tHI0iWFtCicYDXN1eQPCnvGjfcBIn6hBDGM1E4ts="></script>
+    nonce="BAMLRbTM0UT7woUYMwNOSvaolndnS/+GDVAhBt0RPLc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1327882/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              345
+                              346
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1327882/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              345
+                              346
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
