--- a/VRChat/02/1305102.html
+++ b/VRChat/02/1305102.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "avMD1tY22VEwIcDoaqQgNTCGFe4UygeWMgl8iPw27Yw="></script>
+    "EY+5hoBBGTA321ReOxqcT8KglQYniTzB7M7+zqvFbWg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料あり】干渉しにくい肌｜#VRoid #VRChat","description":"デフォルト肌スキンの上半身を透過させたテクスチャです。\n激しいモーションやMMDで躍らせたいときなどに役に立つかもしれません。\n各種お洋服によって使い分けしてください。\n\n詳細は下記仕様をご確認ください。\n\nただのヌードテクスチャはこちら。\n【無料】裸の肌\nhttps://yui-noe.booth.pm/items/1326238\n\n商品がお気に召しましたらブースト用をご購入してくださると大変励みになります。\n\n●2019.09.01 追記\nパーカー・シャツを追加しました。\nこちらは有料販売のため改変後も再配布不可となります。","url":"https://booth.pm/ja/items/1305102","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1305102/bf975101-3f83-4941-b13d-fd3d34a78bef_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="avMD1tY22VEwIcDoaqQgNTCGFe4UygeWMgl8iPw27Yw="></script>
+    nonce="EY+5hoBBGTA321ReOxqcT8KglQYniTzB7M7+zqvFbWg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1305102/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              735
+                              737
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1305102/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              735
+                              737
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
