--- a/VRChat/19/1323719.html
+++ b/VRChat/19/1323719.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+2Ck94qHhTZwE7O+NBpgPt+XmZwxhupYGtGdhAE+oJ8="></script>
+    "sJ4iQ2NQYeYWe9wg9gmetbdbCry6Ss3bfIkZ73fCBAg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け3Dモデル「白神鈴」","description":"VRChat向けオリジナル３Dモデル「白神鈴」\n制作者：YUU_0w0（白星Vトリエ）\n\n本モデルはUnityのHumanoid形式に対応したオリジナルモデルです。\n下に利用規約が記載されていますので、ご了承の上での購入をお願いします。\n\n本モデルを使った写真など、もしよければ　#白星Vトリエ　を付けてツイートすると嬉しいです！\n\n白神鈴ちゃんの裏設定の漫画もゆっくり描いているので、もし良ければ読んでみませんか： https://twitter.com/YUU_0w0w0/status/1189116219963535360\n\n【HAKUSEI AVATARS TESTING 白星アバター試着ワールド】： https://vrchat.com/home/world/wrld_5366b1ab-e4e0-4047-adfd-641f8a39a836","url":"https://booth.pm/ja/items/1323719","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/c9217dbe-3106-403a-8311-3ac2f1bafc6e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+2Ck94qHhTZwE7O+NBpgPt+XmZwxhupYGtGdhAE+oJ8="></script>
+    nonce="sJ4iQ2NQYeYWe9wg9gmetbdbCry6Ss3bfIkZ73fCBAg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1323719/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               784
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1323719/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               784
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
