--- a/VRChat/67/1320867.html
+++ b/VRChat/67/1320867.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Oqe9N9o2TkQVPB51uag8yOcr8ggvYgRWhqp/F4Rqlmw="></script>
+    "eGxBuw20DQY58JIv3rbyI2gtWlUItqJWdNhBXpLp+kA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料配布】聖なるメリケンサック","description":"【製品内容】\n・UnityPackage \n\n【説明】\n某映画に出てくる聖なるメリケンサックです\n\n【利用規約】\n許可事項\n･商用･非商用利用\n･改変\n\n禁止事項\n･再配布\n･制作者と偽る行為\n\n\nその他\n･コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。","url":"https://booth.pm/ja/items/1320867","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/19841b6f-5483-4177-a358-c82f12b87a03/i/1320867/050d034b-5516-4405-9321-3816839a282f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Oqe9N9o2TkQVPB51uag8yOcr8ggvYgRWhqp/F4Rqlmw="></script>
+    nonce="eGxBuw20DQY58JIv3rbyI2gtWlUItqJWdNhBXpLp+kA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1320867/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1320867/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
