--- a/VRChat/31/1320631.html
+++ b/VRChat/31/1320631.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "osisrolwuVk+E2b9ihzMyHpnVYt7lEW9xGrytn3o/Yk="></script>
+    "Vq3t0HDjoBoFHvYvF1ku5h2ORQ2MQpAmMw28dpc4XP4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"缶バッチ風モデルver1.0","description":"簡易的な缶バッチ風３Dモデルです。\n\n内容物は以下のものをzipファイルにまとめております。\n\n・Unityパッケージ\n・FBXファイル\n・Blenderファイル\n・UVテクスチャ\n・サンプル用＿表面水色テクスチャ\n・Readme\n\n\nポリゴン数\n　頂点　　264\n　辺　　　529\n　面　　　268\n　三角面　496\n\n※イメージ画像のLunauffちゃん及びテクスチャ等は付属しておりません。\n\n◆◇◆利用規約◆◇◆\n---------------------------------------------------------\n\n※本モデルデータをご利用された場合には、利用規約にご同意いただいたものとみなされます。\n\n---------------------------------------------------------\n\n■免責事項\n\n・改変の有無に関わらず本データの著作権は制作者であるkuroharuに帰属します。\n・本モデルを使用することで使用者側に不利な問題、如何なる障害や損失があっても配布元は一切責任を負いません。\n・本データは予告なくアップデート、販売の停止をする場合があります。\n・本規約は予告なく変更される場合があります。\n\n\n■禁止事項\n\n・違法行為並びにそれを助長するような行為を禁止します。\n・本モデルデータ、または本モデルを元にしたモデルの許可なき再頒布はできません。\n\n\n■商業利用\n\n・商用利用を行う場合クレジットの記載が必須となります。\n\n\n\n---------------------------------------------------------\n\n\n不明な点がありましたらお気軽にご質問ください。\n\nTwitter:@kuros345\n\n\n\n","url":"https://booth.pm/ja/items/1320631","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ab197c7a-24e4-4a20-ba83-4d171781d120/i/1320631/612cbbb2-81e6-4f3c-b814-c82b963fb019_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="osisrolwuVk+E2b9ihzMyHpnVYt7lEW9xGrytn3o/Yk="></script>
+    nonce="Vq3t0HDjoBoFHvYvF1ku5h2ORQ2MQpAmMw28dpc4XP4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1320631/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               147
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1320631/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               147
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
