--- a/VRChat/57/1320557.html
+++ b/VRChat/57/1320557.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jsq3bFYaNCNEaCcB4hmR6wT+juAc4UY0AEMtj9g8HmI="></script>
+    "vp1puTof4oVdBrIW8WtvqFuNoRoz2Yg6iHVQV4RPnIM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"安全ピン","description":"VRChat向け安全ピンの3Dモデルです。\nご自由にお使いください。\n\nポリゴン数:642\n\n禁止事項\n\n・二次配布、販売（改造・未改造問わず）\n・公序良俗に反する行為\n・政治的、宗教的活動\n・自作発言\n\n\n当モデルの利用は全て自己責任でお願いします。\nコンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。","url":"https://booth.pm/ja/items/1320557","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b0893d4d-3622-4477-b0fb-2922c00e4232/i/1320557/f5477aeb-df50-4acf-9a47-84f2fac89965_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jsq3bFYaNCNEaCcB4hmR6wT+juAc4UY0AEMtj9g8HmI="></script>
+    nonce="vp1puTof4oVdBrIW8WtvqFuNoRoz2Yg6iHVQV4RPnIM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1320557/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               99
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1320557/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               99
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
